# hypothesis_geometry

./: .azure-pipelines.yml  .bumpversion.cfg  .coveragerc  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  README.md  conftest.py  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
hypothesis_geometry/: __init__.py  hints.py  planar.py  utils.py
hypothesis_geometry/_core/: base.py  constants.py  contracts.py  factories.py  hints.py  subdivisional.py  triangular.py  utils.py
hypothesis_geometry/core/: angular.py  base.py  constants.py  contracts.py  enums.py  factories.py  hints.py  subdivisional.py  triangular.py  utils.py
tests/: conftest.py  hints.py  test_bounding_boxes.py  test_boxes.py  test_concave_contours.py  test_contours.py  test_convex_contours.py  test_empty_geometries.py  test_mixes.py  test_multicontours.py  test_multipoints.py  test_multipolygons.py  test_multisegments.py  test_points.py  test_polygons.py  test_polylines.py  test_rectangular_contours.py  test_segments.py  test_star_contours.py  test_triangular_contours.py  utils.py
tests/strategies/: __init__.py  base.py
